--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@
 }
 
 .jumbotron {
-  background-image:url("http://www.hiveworkshop.com/forums/resource_images/1/sc2res_79/tn_files/Space.tga.jpg");
+  background-image:url("http://rxrwng.appspot.com/www.hiveworkshop.com/forums/resource_images/1/sc2res_79/tn_files/Space.tga.jpg");
   height: 500px;
 }
 
