--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
-﻿.nav a {
+
+.nav a {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
@@ -50,7 +51,8 @@
 
 .computer-stuff{
    background-color:blue;
-   height:500px;
+   height:750px;
+   background-size:100%;
 }
 .computer-stuff .container{
       position: relative;
@@ -69,4 +71,29 @@
     color:#fff;
     font-size: 28px;
     text-align:right;
+}
+
+.ecs h1
+{
+    font-family: Impact;
+    font-size:48px;
+    font-weight:bold;
+    color:#fff;
+    text-align:left;
+}
+.ecs p
+{
+     font-family:'Agency FB';
+    color:#fff;
+    font-size: 28px;
+    text-align:left;
+}
+.ecs .container{
+      position: relative;
+      top:100px;
+}
+ .ecs{
+   background-color:orange;
+   height:500px;
+   background-size:500px;
 }
