--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -16,7 +16,7 @@
     width:100%;
 }
 .jumbotron {
-  background-image:url("http://www.hiveworkshop.com/forums/resource_images/1/sc2res_79/tn_files/Space.tga.jpg");
+  background-image:url("http://rxrwng.appspot.com/www.hiveworkshop.com/forums/resource_images/1/sc2res_79/tn_files/Space.tga.jpg");
   height: 750px;
   background-attachment:fixed;
   z-index:1;
