--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -57,6 +57,8 @@
   font-family: 'Andale Mono', sans-serif;
   font-weight: bold;
   text-align:center;
+  background-image: url("http://boscosgrindhouse.files.wordpress.com/2012/07/the-matrix.jpeg?w=900&h=675");
+  background-attachment: fixed;
 }
 
 .hacker p {
