--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -58,6 +58,7 @@
   text-align:center;
   background-image: url("http://boscosgrindhouse.files.wordpress.com/2012/07/the-matrix.jpeg?w=900&h=675");
   background-attachment: fixed;
+  color: #fff;
 }
 
 .hacker p {
