--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -142,7 +142,7 @@
   height: 250px;
   z-index:1;
   text-align:center;
-  align-items:center;
+  align-items: center;
   background-repeat:no-repeat;
   background-size:cover;
   background-attachment:fixed;
@@ -156,7 +156,7 @@
 
 .latin h1
 {
-    font-family:'Edwardian Script ITC';
+    font-family:'Tangerine';
     font-size:42px;
     color:black;
 }
