--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -92,7 +92,7 @@
 
 .education p
 {
-    font-family:Andy;
+    font-family:Ubuntu;
     font-size:24px
 }
 
@@ -130,7 +130,7 @@
 
 .hacker p
 {
-    font-family:'Agency FB';
+    font-family:Ubuntu;
     font-size:24px;
     color:black;
     font-weight:bolder;
